landing_style.css
/* VIDEO FIT */
.hero-media video {
    /*transform: scale(1.15);*/
    object-fit: cover;
    width: 100%;
    height: 100%;

    min-width: 900px;
}

.hero {
    display: flex;
    align-items: start;
    justify-content: space-between;
    padding: 0;
    margin: 0;

    width: 100%;
    height: 100%;
}

/* TEXT SIDE */
.hero-text {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: start;

    padding: 4rem;
    margin: auto 0 auto 10%;
    min-width: 622px;
    max-width: 622px;
    width: 100%;
    background: var(--color-accent);
    border-radius: 4rem;
    box-shadow: 0.5rem 0.5rem 10px rgba(0, 0, 0, 0.1);
}

.hero-text h1 {
    font-family: "Open Sans", sans-serif;
    color: #333333;
    font-size: 40px;
    line-height: 1.3;
    margin-bottom: 30px;
    text-align: center;
    width: 100%;
}

.hero-text span {
    font-family: "Open Sans", sans-serif;
    color: #253251;
    font-weight: bold;
    text-transform: uppercase;
}

.hero-text p {
    font-family: "Barlow", sans-serif;
    font-weight: 500;
    font-style: normal;
    color: #5f5f5f;
    margin-bottom: 25px;
    font-size: 14px;
    line-height: 1.6;
    text-align: left;
}

/* BUTTON */
.hero-text button {
    font-family: "Barlow", sans-serif;
    background: #233f5e;
    color: white;
    border: none;
    padding: 12px 24px;
    border-radius: 25px;
    cursor: pointer;
    font-size: 14px;
}

.hero-text button:hover {
    background: #47a8a4;
}

/* RESPONSIVE */
@media (min-width: 1281px) {
    /* HERO */
    .hero-media {
        mask: url("media/svg/blob_3.svg") no-repeat right center;
        -webkit-mask: url("media/svg/blob_3.svg") no-repeat right center;
    }
}

@media (max-width: 1280px) {
    .hero {
        flex-direction: column;
        text-align: center;
    }

    .hero-text {
        margin: 2rem auto;
    }
}


@media (max-width: 900px) {
    .hero-text {
        min-width: 300px;
        max-width: 80%;

        padding: 2rem;
        margin: 2rem;
    }

    .hero-text h1 {
        font-size: 30px;
    }

    .hero-media {
        width: 100%;
        overflow: hidden;
    }

    .hero-media video {
        position: relative;
        left: 50%;
        transform: translateX(-50%);
    }

    nav {
        display: none; /* optional for mobile */
    }


}

